Bug 1836818 - Tweak chrome document check so that it also applies to about:logins. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D180070