layout/style/Loader.cpp
@@ -1874,9 +1874,10 @@ Result<Loader::LoadSheetResult, nsresult> Loader::LoadStyleLink(
     if (!aInfo.mContent) {
       return false;
     }
-    const bool privilegedShadowTree = aInfo.mContent->IsInShadowTree() &&
-                                      (aInfo.mContent->ChromeOnlyAccess() ||
-                                       aInfo.mContent->IsInChromeDocument());
+    const bool privilegedShadowTree =
+        aInfo.mContent->IsInShadowTree() &&
+        (aInfo.mContent->ChromeOnlyAccess() ||
+         aInfo.mContent->OwnerDoc()->ChromeRulesEnabled());
     if (!privilegedShadowTree) {
       return false;
     }
